fixed media query for iphone XR/11

--- a/assets/style.css
+++ b/assets/style.css
@@ -160,6 +160,22 @@ article h2 {
     width: 5%
 }
 
+@media only screen and (max-width: 1314px) {
+    .comingsoon {
+        width: 15%;
+        margin-left: 10px;
+        margin-bottom: 10px;
+    }
+}
+
+@media only screen and (max-width: 897px) {
+    .comingsoon {
+        width: 15%;
+        margin-left: 10px;
+        margin-bottom: 10px;
+    }
+}
+
 @media only screen and (max-width: 786px) {
     .bgimage {
         margin-top: 68px;
@@ -192,7 +208,7 @@ article h2 {
     }
 }
 
-@media only screen and (max-width: 387px) {
+@media only screen and (max-width: 687px) {
     .bgimage {
         margin-top: 89px;
     }
@@ -204,8 +220,8 @@ article h2 {
         text-align: center;
     }
     .comingsoon {
-        margin-left: 50px;
-        width: 50%;
+        margin-left: 115px;
+        width: 30%;
     }
     .about-me-paragraph {
         margin: 0px 10px 0px 10px;
